Masters adjustments import via csv and calculations plus general tidy up

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -114,4 +114,12 @@ td, th, .control {
   cursor: pointer;
 }
 
+.accordion {
+  margin-bottom: 15px;
+}
+
+.control-full-width {
+  width: 100%;
+}
+
 @import "~bulma"
