--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -38,12 +38,23 @@ table {
   margin: 0 auto;
 }
 
+@media all {
+	.page-break	{ display: none; }
+}
+
 @media print
 {
     .no-print, .no-print *
     {
         display: none !important;
     }
+
+    .page-break	{ display: block; page-break-before: always; }
+
+}
+
+.padding {
+  padding: 1em;
 }
 
 .container {
@@ -147,5 +158,24 @@ td, th, .control {
 
 .text-container {
   margin-bottom: 15px;
+}
+
+.c-data-loader {
+  @media (min-width: 640px) {
+    display: flex;
+  }
+
+  &__progress {
+    @media (min-width: 640px) {
+      width: 70%;
+      margin-left: 1rem;
+      padding: 1rem;
+    }
+  }
+
+  &__status-message {
+    margin-bottom: 0.5rem;
+  }
+
 }
 
