--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -7,6 +7,7 @@ $phLogoBlue: #00B4FC;
 $phLogoRiver: #1E099C;
 $bblLogoBlu: #4169e1;
 $bblGrey: lightgrey;
+$white: #fff;
 $primary: $bblBlue;
 $section-padding: 1.5rem 1.5rem;
 // $tabs-link-hover-color: $phLogoBlue;
