--- a/frontend/src/components/organisms/Menu/menu.scss
+++ b/frontend/src/components/organisms/Menu/menu.scss
@@ -33,7 +33,7 @@
     min-height: 200px;
     padding: 1rem;
     background-color: $white;
-    border: 1px solid $grey;
+    border: 1px solid $bblGrey;
 
     &--hide {
       display: none;
