--- a/frontend/src/components/atoms/MenuButton/menuButton.scss
+++ b/frontend/src/components/atoms/MenuButton/menuButton.scss
@@ -10,4 +10,9 @@
     background-color: $bblBlue;
     color: $white;
   }
+
+  &--active {
+    background-color: $bblBlue;
+    color: $white;
+  }
 }
