--- a/frontend/src/lib.scss
+++ b/frontend/src/lib.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
 /*************************
 ** Breakpoints **
@@ -10,14 +11,14 @@ $lg: 1248px;
 ** Typography **
 *************************/
 
-$font-headline: 'Larken', 'Times New Roman', 'Times', serif;
-$font-body: 'Manrope', 'Arial', sans-serif;
+$font-headline: 'Open sans', 'Times New Roman', 'Times', serif;
+$font-body: 'Open sans', 'Arial', sans-serif;
 $normal: 400;
 $bold: 700;
 
 @mixin font-headline($weight: $normal) {
   font-family: $font-headline;
-  font-style: normal;
+  font-style: bold;
   font-weight: $weight;
 }
 
@@ -38,94 +39,57 @@ $bold: 700;
 @mixin h1 {
   @include font-headline;
 
-  font-size: rem(48px);
-  line-height: rem(48px);
+  font-size: rem(36px);
+  line-height: 1.1;
   @media screen and (min-width: $md) {
-    font-size: rem(60px);
-    line-height: rem(60px);
-  }
-  @media screen and (min-width: $lg) {
-    font-size: rem(72px);
-    line-height: rem(72px);
+    font-size: rem(48px);
   }
 }
 
 @mixin h2 {
   @include font-headline;
+  color: $bblBlue;
 
-  font-size: rem(36px);
-  line-height: rem(36px);
+  font-size: rem(28px);
+  line-height: 1.1;
   @media screen and (min-width: $md) {
-    font-size: rem(48px);
-    line-height: rem(48px);
-  }
-  @media screen and (min-width: $lg) {
-    font-size: rem(60px);
-    line-height: rem(60px);
+    font-size: rem(36px);
   }
 }
 
 @mixin h3($weight: $normal) {
   @include font-headline($weight);
 
-  font-size: rem(28px);
-  line-height: rem(33.6px);
+  font-size: rem(24px);
+  line-height: 1.1;
   @media screen and (min-width: $md) {
-    font-size: rem(36px);
-    line-height: rem(36px);
-  }
-  @media screen and (min-width: $lg) {
-    font-size: rem(48px);
-    line-height: rem(57.6px);
+    font-size: rem(28px);
   }
 }
+
 @mixin h4($weight: $normal) {
   @include font-headline($weight);
 
-  font-size: rem(24px);
-  line-height: rem(28.8px);
+  font-size: rem(20px);
+  line-height: 1.1;
   @media screen and (min-width: $md) {
-    font-size: rem(28px);
-    line-height: rem(33.6px);
-  }
-  @media screen and (min-width: $lg) {
-    font-size: rem(36px);
-    line-height: rem(43.2px);
+    font-size: rem(22px);
   }
 }
 @mixin h5($weight: $normal) {
   @include font-headline($weight);
 
-  font-size: rem(20px);
-  line-height: rem(24px);
-  @media screen and (min-width: $md) {
-    font-size: rem(22px);
-    line-height: rem(26.4px);
-  }
-  @media screen and (min-width: $lg) {
-    font-size: rem(30px);
-    line-height: rem(39px);
-  }
-}
-@mixin h6($weight: $normal) {
-  @include font-headline($weight);
-
   font-size: rem(18px);
-  line-height: rem(25.2px);
-  @media screen and (min-width: $lg) {
-    font-size: rem(22px);
-    line-height: rem(28.6px);
-  }
+  line-height: 1.1;
 }
 
 @mixin body($weight: $normal) {
   @include font-body($weight);
 
   font-size: rem(16px);
-  line-height: rem(22.4px);
+  line-height: 1.1;
   @media screen and (min-width: $lg) {
     font-size: rem(18px);
-    line-height: rem(25.2px);
   }
 
   // Prevent body from scrolling when nav is open
@@ -159,8 +123,23 @@ $bold: 700;
 /*************************
 ** Grid **
 *************************/
-$width: 1152px;
+$width: 1344px;
 $cols: 12;
+
+@mixin section() {
+  padding: rem(12px) 0;
+  @media screen and (min-width: $md) {
+    padding: rem(24px) 0;
+  }
+}
+
+@mixin section-with-lines() {
+  padding: rem(12px) 0;
+  border-top: 1px solid $bblBlue;
+  @media screen and (min-width: $md) {
+    padding: rem(24px) 0;
+  }
+}
 
 @mixin container($width: $width) {
   max-width: $width;
