fix: add space between table and pagination

--- a/frontend/src/components/pages/ResultIndex/resultIndex.scss
+++ b/frontend/src/components/pages/ResultIndex/resultIndex.scss
@@ -2,7 +2,8 @@
 
 .result-index {
     &__table-container {
-        overflow-x: auto;
+      overflow-x: auto;
+      margin-bottom: 1.5rem;
     }
   
     &__table {
