fix: link to contact report and button center

--- a/frontend/src/components/atoms/TextButton/textButton.scss
+++ b/frontend/src/components/atoms/TextButton/textButton.scss
@@ -10,6 +10,7 @@
   border: 1px solid $bblBlue;
   background: $bblBlue;
   color: $white;
+  text-align: center;
   @include body-small(bold);
 
   &:hover {
