feat: refine labels and styling of key pages

--- a/frontend/src/components/organisms/Hero/hero.scss
+++ b/frontend/src/components/organisms/Hero/hero.scss
@@ -10,6 +10,11 @@
     @include container;
   }
 
+  &__side {
+    display: flex;
+    justify-content: flex-end;
+  }
+
   h1 {
     color: $white;
 
