--- a/frontend/src/components/pages/CrewLabels/crewLabels.scss
+++ b/frontend/src/components/pages/CrewLabels/crewLabels.scss
@@ -8,8 +8,8 @@
 
   &__label {
     border: 1px solid $bblGrey;
-    height: 200px;
-    padding: 1.5rem;
+    height: 206px;
+    padding: 1.5rem 1.5rem 1.5rem 2.5rem;
   }
 
   &__start-order {
