--- a/frontend/src/components/atoms/TextButton/textButton.scss
+++ b/frontend/src/components/atoms/TextButton/textButton.scss
@@ -3,7 +3,7 @@
 .text-button {
   display: inline-block;
   height: fit-content;
-  padding: rem(11px) rem(24px);
+  padding: 0.5rem 1.5rem;
   border-radius: rem(60px);
   text-decoration: none;
   transition: all 0.2s ease-in;
@@ -31,6 +31,6 @@
   }
 
   @media screen and (min-width: $lg) {
-    padding: rem(16px) rem(36px);
+    padding: 0.5rem 2rem;
   }
 }
