fix: rowing to Rowing and label format

--- a/frontend/src/components/pages/CrewLabels/crewLabels.scss
+++ b/frontend/src/components/pages/CrewLabels/crewLabels.scss
@@ -18,8 +18,14 @@
     @include h2;
   }
 
+  &__crew-details,
+  &__start-order {
+    margin-bottom: 0.5rem;
+  }
+
   &__host {
-    @include h4;
+    @include h5;
+    font-weight: $bold;
   }
 }
 
