feat: more frontend changes

--- a/frontend/src/components/atoms/TextButton/textButton.scss
+++ b/frontend/src/components/atoms/TextButton/textButton.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   height: fit-content;
   padding: 0.5rem 1.5rem;
-  border-radius: rem(60px);
+  border-radius: 1.5rem;
   text-decoration: none;
   transition: all 0.2s ease-in;
   border: 1px solid $bblBlue;
