--- a/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
+++ b/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
@@ -4,15 +4,24 @@
   &__section {
     @include section;
   }
+
   &__container {
     @include container;
   }
+
+  &__table {
+    margin-left: 0;
+  }
+
   &__title {
     margin-bottom: 1rem;
     @include h2;
   }
+
   &__location-title {
     margin-bottom: 1rem;
     @include h4;
   }
+
+
 }
