--- a/frontend/src/components/atoms/IconButton/iconButton.scss
+++ b/frontend/src/components/atoms/IconButton/iconButton.scss
@@ -39,6 +39,15 @@
     height: rem(48px);
   }
 
+  &:hover {
+    background: $bblBlue;
+    border: 2px solid $bblBlue;
+    path {
+      fill: $white;
+      stroke: $white;
+    }
+  }
+
 
   &:focus-visible {
     border: 2px solid $bblBlue;
