--- a/frontend/src/components/atoms/MenuButton/menuButton.scss
+++ b/frontend/src/components/atoms/MenuButton/menuButton.scss
@@ -1,10 +1,14 @@
 @import '../../../style.scss';
 
 .menu-button {
-  cursor: pointer;
   background-color: $phLogoBlue;
-  padding: 1rem 2rem;
-  border: unset;
+  padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
+  color: $bblBlue;
+  transition: all 0.2s ease-in;
+  border-radius: 1.5rem;
+
+  @include body-small(bold);
 
   &:hover {
     background-color: $bblBlue;
