--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -10,7 +10,9 @@ $phLogoBlue: #00B4FC;
 $phLogoRiver: #1E099C;
 $bblLogoBlu: #4169e1;
 $bblGrey: lightgrey;
+$darkGrey: #666666;
 $white: #fff;
+$black: #000;
 $primary: $bblBlue;
 $section-padding: 1.5rem 1.5rem;
 // $tabs-link-hover-color: $phLogoBlue;
