feat: refine number location approach

--- a/frontend/src/components/molecules/CSVDataLoader/csvdataloader.scss
+++ b/frontend/src/components/molecules/CSVDataLoader/csvdataloader.scss
@@ -9,7 +9,10 @@
   }
 
   &__section {
-    @include section-with-lines;
+    @include section;
+    &--lines {
+      @include section-with-lines;
+    }
   }
   
   &__title {
