--- a/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
+++ b/frontend/src/components/pages/CrewStartByNumberLocation/crewStartByNumberLocation.scss
@@ -9,8 +9,13 @@
     @include container;
   }
 
+  &__table-container {
+    overflow-x: auto;
+  }
+
   &__table {
     margin-left: 0;
+    max-width: 100%;
   }
 
   &__title {
@@ -22,6 +27,5 @@
     margin-bottom: 1rem;
     @include h4;
   }
-
 
 }
