--- a/frontend/src/components/pages/CrewIndex/crewIndex.scss
+++ b/frontend/src/components/pages/CrewIndex/crewIndex.scss
@@ -8,6 +8,17 @@
   &__table {
     max-width: 100%;
   }
+
+  &__buttons {
+    .text-button {
+      margin-right: 0.5rem;
+      @media (min-width: $lg) {
+        display: inline-flex;
+        margin-right: 0;
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
 }
 
 .masters-calculation {
@@ -23,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: $bblGrey;
+    background-color: $phLogoBlue;
     margin-bottom: 1.5rem;
     padding: 0.5rem 1rem;
 
@@ -42,6 +53,10 @@
   }
 
   &__details {
+    cursor: pointer;
+    color: $bblBlue;
+    @include body-small(bold);
+    
     @media (min-width: $lg) {
       grid-column: 3 / span 8;
     }
@@ -50,5 +65,4 @@
   &__icon {
     margin-top: 0.5rem;
   }
-
 }
