--- a/frontend/src/components/molecules/Breadcrumbs/breadcrumbs.scss
+++ b/frontend/src/components/molecules/Breadcrumbs/breadcrumbs.scss
@@ -5,7 +5,8 @@
   padding-bottom: 0.5rem;
 
   &__container {
-    @include container;
+    display: flex;
+    align-items: center;
   }
 
   &__divider {
