feat: more work with react query and react table

--- a/frontend/src/components/atoms/IconButton/iconButton.scss
+++ b/frontend/src/components/atoms/IconButton/iconButton.scss
@@ -13,8 +13,18 @@
   border: 1px solid $phLogoBlue;
 
   &:disabled {
-    opacity: 0.15;
-    pointer-events: none;
+    background-color: $white;
+    border: 1px solid $bblGrey;
+    pointer-events: none; 
+
+    .icon-button__icon {
+      svg {
+        path {
+          fill: $bblGrey;
+          stroke: $bblGrey;
+        }
+      }
+    }
   }
 
   &__icon {
