--- a/frontend/src/components/organisms/RaceTimesManager/raceTimesManager.scss
+++ b/frontend/src/components/organisms/RaceTimesManager/raceTimesManager.scss
@@ -7,6 +7,24 @@
     margin-left: 0; 
   }
 
+  &__expand {
+    height: 100%;
+    width: 0.5rem;
+    padding: 0.25rem 0;
+    transition: transform 0.3s ease-in-out;
+
+    svg {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+
+    &.open {
+      display: block;
+      transform: rotate(90deg);
+    }
+  }
+
   .td-center {
     text-align: center;
 
