--- a/frontend/src/components/pages/GenerateResults/generateResults.scss
+++ b/frontend/src/components/pages/GenerateResults/generateResults.scss
@@ -1,6 +1,6 @@
 @import '../../../style.scss';
 
-.generate-start-order {
+.generate-results {
   &__title {
       margin-bottom: 1rem;
       color: $bblBlue;
@@ -13,13 +13,6 @@
   }
 
   &__section {
-    @include section;
-  }
-
-  &__sub-section {
-    border-top: 1px solid $bblBlue;
-    padding-top: 1rem;
-
     @include section;
   }
 
