--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -1,8 +1,6 @@
-@use "bulma/sass/base";
-@use "bulma/sass/themes";
-@use "bulma/sass/elements/button";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 @import './lib.scss';
+@import './base.scss';
 
 $family-primary: 'Open Sans', sans-serif;
 // colours
@@ -13,6 +11,7 @@ $bblLogoBlu: #4169e1;
 $bblGrey: lightgrey;
 $darkGrey: #666666;
 $white: #fff;
+$screen-font-color: #222;
 $black: #000;
 $primary: $bblBlue;
 $green: #00C950;
@@ -24,8 +23,9 @@ $amber-tint: #FEFBEA;
 $blue-tint: #EEF6FF;
 $grey-tint: #F9FAFB;
 
+$standard-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+
 $section-padding: 1.5rem 1.5rem;
-// $tabs-link-hover-color: $phLogoBlue;
 $tabs-boxed-link-hover-background-color: $phLogoBlue;
 $tabs-toggle-link-hover-background-color: $phLogoBlue;
 $tabs-toggle-link-active-background-color: $phLogoBlue;
@@ -42,18 +42,6 @@ $navbar-height: 1 rem;
   @include sr-only;
 }
 
-
-.startTab.active, .finishTab.active {
-  text-align: center;
-  padding: 10px 30px;
-  background-color: $phLogoBlue;
-  border: 1px solid #dbdbdb;
-}
-
-body {
-  margin: 0 auto;
-}
-
 @media all {
 	.page-break	{ display: none; }
 }
@@ -67,100 +55,4 @@ body {
 
     .page-break	{ display: block; page-break-before: always; }
 
-}
-
-.padding {
-  padding: 1em;
-}
-
-.column.left, div.list-totals {
-  text-align: left;
-}
-
-div.list-totals {
-  margin-bottom: 2px;
-  padding-left: 9px;
-}
-
-.tabContainer {
-  margin: 0 auto;
-  width: 400px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-
-.search {
-  width: 400px;
-  margin: 0 auto;
-}
-
-.navbar-item {
-  margin-left: 10px;
-}
-
-.checkbox {
-  margin-right: 8px;
-}
-
-.button {
-  width: 200px;
-}
-
-.button:disabled {
-  opacity: 0.5;
-}
-
-.double-height-button.button {
-  height: 60px;
-  white-space: normal;
-}
-
-.spinner {
-  margin: 0 5px;
-}
-
-td, th, .control {
-  font-size: 12px;
-}
-
-.icon-clickable {
-  color: $bblBlue;
-  margin-top: 5px;
-  cursor: pointer;
-}
-
-.icon-disabled {
-  color: $bblGrey;
-  margin-top: 5px;
-  cursor: pointer;
-}
-
-.accordion {
-  margin-bottom: 15px;
-}
-
-.accordion-item {
-  button {
-    font-size: 18px;
-  }
-}
-
-.control-full-width {
-  width: 100%;
-}
-
-.file.is-right {
-  justify-content: flex-start;
-  margin-bottom: 15px;
-}
-
-.section-has-lines {
-  border-top: 1px solid $bblBlue;
-  padding: 15px 0;
-}
-
-.text-container {
-  margin-bottom: 15px;
 }
