Updates to crew management dashboard

--- a/frontend/src/components/organisms/RaceTimesTable/raceTimesTable.scss
+++ b/frontend/src/components/organisms/RaceTimesTable/raceTimesTable.scss
@@ -1,7 +1,7 @@
 @import '../../../style.scss';
 @import '../../../lib.scss';
 
-.crew-time-compare {
+.race-times-table {
   &__table-container {
     overflow-x: auto;
   }
