--- a/frontend/src/components/atoms/FormSelect/formSelect.scss
+++ b/frontend/src/components/atoms/FormSelect/formSelect.scss
@@ -1,21 +1,32 @@
 @import '../../../style';
 
 .form-select {
+
+  &__label {
+    display: block;
+    margin-bottom: 0.5rem;
+
+    @include body-small(bold);
+  }
+
+
   &__select-wrapper {
     position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
+    border: 2px solid $bblGrey;
     border-radius: 0.5rem;
     cursor: pointer;
     transition: all 0.2s ease-in;
+    
+    &:focus-within {
+      border: 2px solid $bblBlue;
+      background: $white;
+      outline: 2px solid $phLogoBlue;
+    }
   }
 
   &__select {
-    position: relative;
-    z-index: 1;
     width: 100%;
-    padding: 0.5rem 0.75rem;
+    padding: 1rem 0.75rem;
     border: unset;
     appearance: none;
     background: none;
@@ -43,26 +54,6 @@
 
       path {
         transition: transform 0.2s ease-in;
-      }
-    }
-  }
-
-  &__select-wrapper {
-    border: 2px solid $bblGrey;
-
-    &:focus-within {
-      border: 2px solid $bblBlue;
-      background: $white;
-      outline: 2px solid $phLogoBlue;
-
-      .form-select__select {
-        color: get-value(font-color);
-      }
-
-      .form-select__icon {
-        svg > path {
-          fill: get-value(icon-color);
-        }
       }
     }
   }
